--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "release-it": "^17.10.0",
     "tsc-alias": "^1.8.10",
     "type-fest": "^4.26.1",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0"
   },
   "peerDependencies": {
-    "reflect-metadata": "^0.2.2",
-    "typescript": "^5.6.3"
+    "reflect-metadata": "^0.2.2"
   }
 }
