--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Set Git user config
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email "${{ github.actor }}+github-actions[bot]@users.noreply.github.com"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Set up Node.js version
         uses: actions/setup-node@v4
