chore: worflow update to publish in main branch

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -19,9 +19,6 @@ jobs:
   publish:
     if: github.actor == 'leanderpaul' && github.triggering_actor == 'leanderpaul' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
 
     steps:
       - name: Checkout repository
@@ -29,15 +26,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set Release branch
-        run: |
-          git checkout -b release
-          git push --set-upstream origin release
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.SHADOW_MANAGER_APP_ID }}
+          private-key: ${{ secrets.SHADOW_MANAGER_PRIVATE_KEY }}
 
       - name: Set Git user config
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "$APP_SLUG[bot]"
+          git config user.email "$INSTALLATION_ID+$APP_SLUG[bot]@users.noreply.github.com"
+        env:
+          APP_SLUG: ${{ steps.app-token.outputs.app-slug }}
+          INSTALLATION_ID: ${{ steps.app-token.outputs.installation-id }}
 
       - name: Set up Node.js version
         uses: actions/setup-node@v4
@@ -54,12 +55,16 @@ jobs:
       - name: Bump version
         run: bunx release-it ${{ github.event.inputs.bump }} --ci
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: PR to main
+      - name: Push changes
         run: |
-          gh pr create -f
-          gh pr merge --auto -s
+          gh api --method PUT /repos/${{ github.repository }}/contents/package.json \
+            --field branch="main" \
+            --field encoding="base64"  \
+            --field content="$(base64 -i package.json)" \
+            --field message="$(git show -s --format=%s)" \
+            --field sha="$(git rev-parse HEAD~1:package.json)"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
