--- a/.release-it.json
+++ b/.release-it.json
@@ -16,5 +16,22 @@
   "hooks": {
     "before:init": ["bun test"],
     "before:release": ["bun run build"]
+  },
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "ignoreRecommendedBump": true,
+      "strictSemVer": true,
+      "preset": {
+        "name": "conventionalcommits",
+        "types": [
+          { "type": "feat", "section": "Features" },
+          { "type": "fix", "section": "Bug Fixes" },
+          { "type": "chore", "hidden": true },
+          { "type": "style", "hidden": true },
+          { "type": "refactor", "hidden": true },
+          { "type": "test", "hidden": true }
+        ]
+      }
+    }
   }
 }
