--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.13.0",
+    "@release-it/conventional-changelog": "^10.0.0",
     "@types/bun": "^1.1.13",
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
