--- a/.release-it.json
+++ b/.release-it.json
@@ -4,6 +4,7 @@
     "commitMessage": "chore: release v${version}",
     "requireBranch": "main",
     "requireCommits": true,
+    "commitArgs": ["-n"],
     "push": false
   },
   "github": {
