--- a/package.json
+++ b/package.json
@@ -21,24 +21,25 @@
   },
   "homepage": "https://github.com/shadow-library/lib-name#readme",
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.13.0",
-    "@release-it/conventional-changelog": "^10.0.0",
-    "@types/bun": "^1.1.13",
-    "@typescript-eslint/parser": "^8.11.0",
-    "eslint": "^9.13.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "globals": "^15.11.0",
-    "husky": "^9.1.6",
-    "prettier": "^3.3.3",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/js": "^9.29.0",
+    "@release-it/conventional-changelog": "^10.0.1",
+    "@types/bun": "^1.2.17",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "eslint-import-resolver-typescript": "^3.10.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.20.0",
+    "globals": "^15.15.0",
+    "husky": "^9.1.7",
+    "prettier": "^3.5.3",
     "reflect-metadata": "^0.2.2",
-    "release-it": "^17.10.0",
-    "tsc-alias": "^1.8.10",
-    "type-fest": "^4.26.1",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0"
+    "release-it": "^17.11.0",
+    "tsc-alias": "^1.8.16",
+    "type-fest": "^4.41.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.2.2"
